chore(ci): move demo under folder and split build result

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Upload Build Artifacts 📦
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./demo # Path to the build output directory
+          path: ./demo-dist # Path to the build output directory
 
       - name: Deploy to GitHub Pages 🌐
         id: deployment
