--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@antfu/eslint-config": "^3.12.0",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@turf/bbox": "^7.1.0",
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.17.0",
     "lint-staged": "^15.2.11",
