--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
-    "declaration": true,
-    "outDir": "./dist",
-    "sourceMap": true,
-    "esModuleInterop": true
+    "target": "ESNext", // Use ES module syntax
+    "lib": ["DOM", "ESNext"], // Required for Vite + TS
+    "useDefineForClassFields": true, // Use modern JavaScript features
+    "module": "ESNext", // Include DOM and ESNext APIs
+    "moduleResolution": "Node", // Output directory for compiled files
+    "strict": true, // Resolve modules like Node.js
+    "declaration": true, // Generate declaration files
+    "declarationMap": true, // Generate declaration maps
+    "outDir": "./dist", // Enable strict type checking
+    "esModuleInterop": true, // Skip type checking of declaration files
+    "isolatedModules": true, // Enable interoperability with CommonJS
+    "skipLibCheck": true // Align with ECMAScript private field semantics
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"], // Include source files
+  "exclude": ["node_modules", "dist"] // Exclude build and dependency files
 }
