--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@turf/bbox": "^7.1.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.17.0",
     "lint-staged": "^15.2.11",
@@ -52,7 +53,8 @@
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "vue": "^3.5.13"
   },
   "simple-git-hooks": {
     "commit-msg": "yarn dlx commitlint --edit $1",
