--- a/package.json
+++ b/package.json
@@ -46,15 +46,17 @@
     "@turf/bbox": "^7.1.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.8",
+    "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.17.0",
     "lint-staged": "^15.2.11",
     "maplibre-gl": "^4.7.1",
     "simple-git-hooks": "^2.11.1",
     "typescript": "~5.6.2",
-    "vite": "^5.4.10",
+    "vite": "^6.0.4",
     "vite-plugin-dts": "^4.3.0",
     "vitest": "^2.1.8",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.1.10"
   },
   "simple-git-hooks": {
     "commit-msg": "yarn dlx commitlint --edit $1",
