--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitest/coverage-v8": "^2.1.8",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.17.0",
+    "eslint-plugin-format": "^1.0.1",
     "lint-staged": "^15.2.11",
     "maplibre-gl": "^4.7.1",
     "simple-git-hooks": "^2.11.1",
