--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "vue": "^3.5.13"
   },
   "dependencies": {
-    "@turf/area": "^7.2.0"
+    "@turf/area": "^7.2.0",
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@types/underscore": "^1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.8",
     "@vue/tsconfig": "^0.7.0",
