--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ coverage/
 *.bak
 *.pid
 *.tgz
+
+# Yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
