--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@turf/area": "^7.2.0",
     "@turf/bbox": "^7.2.0",
+    "@turf/boolean-equal": "^7.2.0",
     "@vueuse/components": "^13.7.0",
     "@vueuse/core": "^13.7.0",
     "underscore": "^1.13.7",
