--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@turf/boolean-equal": "^7.2.0",
     "@vueuse/components": "^13.7.0",
     "@vueuse/core": "^13.7.0",
+    "diff": "^8.0.2",
     "underscore": "^1.13.7",
     "vue-router": "^4.5.1"
   },
