--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue": "^3.5.13"
   },
   "dependencies": {
+    "@sentry/vue": "^10.12.0",
     "@turf/area": "^7.2.0",
     "@turf/bbox": "^7.2.0",
     "@turf/boolean-equal": "^7.2.0",
