feat: enable bbox / feature intersection on map init

--- a/package.json
+++ b/package.json
@@ -48,7 +48,14 @@
     "@sentry/vue": "^10.12.0",
     "@turf/area": "^7.2.0",
     "@turf/bbox": "^7.2.0",
+    "@turf/bbox-polygon": "^7.2.0",
     "@turf/boolean-equal": "^7.2.0",
+    "@turf/buffer": "^7.2.0",
+    "@turf/concave": "^7.2.0",
+    "@turf/convex": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "@turf/intersect": "^7.2.0",
+    "@turf/union": "^7.2.0",
     "@vueuse/components": "^13.7.0",
     "@vueuse/core": "^13.7.0",
     "diff": "^8.0.2",
