chore: get sentry dsn from .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 VITE_APP_TITLE=OpenStreetMap Logical History
+
+# Sentry
+
 VITE_SENTRY_AUTH_TOKEN=
+VITE_SENTRY_DSN=
+VITE_SENTRY_ORG=
+VITE_SENTRY_PROJECT=
+VITE_SENTRY_URL=
