chore: use environment variable for api

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 VITE_APP_TITLE=OpenStreetMap Logical History
 VITE_API_ENDPOINT=https://osm-logical-history-dev.teritorio.xyz
 
+# Local only
+VITE_APP_HOST=http://localhost:5173
+
 # Sentry
 
 VITE_SENTRY_AUTH_TOKEN=
